# jsonGenAI

./: README.md  pyproject.toml
.github/workflows/: again-python-publish.yml  python-package.yml
jsonAI/: main.py
