[tool.poetry]
name = "jsonAI"
version = "0.12.0"
description = ""
authors = ["1rgs <kishoretvk9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<4.0"
termcolor = "^2.3.0"
jaxtyping = "^0.2.28"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
ipykernel = "^6.22.0"
torch = "^2.0.0"
accelerate = "^0.18.0"
bitsandbytes = "^0.38.1"
transformers = "^4.27.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
packages = [
    { include = "jsonai" }
]

[virtualenvs]
create = true
in-project = true
